[package]
name = "cln-bip353"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "BIP-353 lookups"
homepage = "https://github.com/ElementsProject/lightning/tree/master/plugins"
repository = "https://github.com/ElementsProject/lightning"

[dependencies]
anyhow = "1"
bytes = "1"
log = { version = "0.4", features = ['std'] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"

log-panics = "2"

cln-plugin = { version = "0.5", path = "../../plugins" }

bitcoin-payment-instructions = { git = "https://github.com/rust-bitcoin/bitcoin-payment-instructions.git", rev = "d071ce27734ca13be2471f81abf8699d902c3a10", features = [
    "http",
] }

reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "socks",
] }

bitcoin = { version = "0.32", default-features = false }
