[tool.poetry]
name = "clnrest"
version = "23.11"
description = "Transforms RPC calls into REST APIs"
authors = ["ShahanaFarooqui <sfarooqui@blockstream.com>"]

[tool.poetry.dependencies]
python = "^3.8"
json5 = "^0.9.14"
flask = "^2.3.3"
flask-restx = "^1.1.0"
gunicorn = "^21.2.0"
pyln-client = "^23.8"
flask-socketio = "^5.3.6"
gevent = "^23.9.1"
gevent-websocket = "^0.10.1"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
