[package]
name = "currencyrate"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fetches currency rates"
homepage = "https://github.com/ElementsProject/lightning/tree/master/plugins"
repository = "https://github.com/ElementsProject/lightning"

[dependencies]
anyhow = "1"
bytes = "1"
log = { version = "0.4", features = ['std'] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1" }

log-panics = "2"

reqwest = { version = "0.13", default-features = false, features = [
    "rustls-no-provider",
    "socks",
    "json",
] }
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "tls12",
    "std",
    "ring",
] }

futures = "0.3"

rand = "0.9"

cln-plugin = { workspace = true }
cln-rpc = { workspace = true }
