[package]
edition = "2021"
name = "cln-grpc-hold-plugin"
version = "0.1.4"

[[bin]]
name = "cln-grpc-hold"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
prost = "0.11"
serde_json = "1.0"
parking_lot = "0.12"
rand = "0.8"
rcgen = { version = "0.10", features = ["pem", "x509-parser"] }
cln-rpc = "0.1.3"
cln-plugin = "0.1.4"

[dependencies.cln-grpc-hold]
path = "../../cln-grpc-hold"

# [dependencies.cln-plugin]
# path = "../../plugins"

# [dependencies.cln-rpc]
# path = "../../cln-rpc"

[dependencies.tokio]
features = ["fs","net", "rt-multi-thread"]
version = "1"

[dependencies.tonic]
features = ["tls", "transport"]
version = "0.8"
