[package]
edition = "2021"
name = "cln-grpc-plugin"
version = "0.3.0"

description = "A Core Lightning plugin that re-exposes the JSON-RPC over grpc. Authentication is done via mTLS."
license = "MIT"
repository = "https://github.com/ElementsProject/lightning"
documentation = "https://docs.rs/crate/cln-grpc-plugin/"

[[bin]]
name = "cln-grpc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
rcgen = { version = "0.13.1", features = ["pem", "x509-parser"] }
prost = "0.12"
cln-grpc = { version = "0.3", features = ["server"], path = "../../cln-grpc"}
cln-plugin = { version = "0.3", path = "../../plugins" }
cln-rpc = { version = "0.3", path = "../../cln-rpc" }
serde_json = "1.0.113"

[dependencies.tokio]
features = ["net", "rt-multi-thread"]
version = "1"

[dependencies.tonic]
features = ["tls", "transport"]
version = "0.11"
