[package]
edition = "2021"
name = "hodlinvoice"
version = "0.1.0"

[[bin]]
name = "hodlinvoice"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
log = "0.4"
serde_json = "1.0.72"
rand = "0.8.5"

[dependencies.cln-plugin]
path = "../../plugins"

[dependencies.cln-rpc]
path = "../../cln-rpc"

[dependencies.tokio]
features = ["net", "rt-multi-thread"]
version = "1"
