[package]
name = "holdinvoice"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cln-rpc = "0.1.4"
cln-plugin = "0.1.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["fs","sync","rt-multi-thread",]}

parking_lot = "0.12"

anyhow = "1"
log = "0.4"
