[package]
name = "cln-lsps"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cln-lsps-client"
path = "src/client.rs"

[[bin]]
name = "cln-lsps-service"
path = "src/service.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bitcoin = "0.31"
chrono = { version= "0.4.42", features = ["serde"] }
cln-plugin = { workspace = true }
cln-rpc = { workspace = true }
hex = "0.4"
log = "0.4"
paste = "1.0.15"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
