[package]
name = "cln-reckless"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Install plugins from remote or local repositories"
homepage = "https://github.com/ElementsProject/lightning/tree/master/plugins"
repository = "https://github.com/ElementsProject/lightning"
rust-version.workspace = true

[dependencies]
anyhow = "1"
log = { version = "0.4", features = ['std'] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "process"] }
tokio-util = { version = "0.7", features = ["codec"] }

futures = "0.3"

log-panics = "2"

which = "8"
url = "2"
sha2 = "0.11"
chrono = "0.4"
hex = "0.4"

clap = { version = "4", features = ["derive"] }

cln-plugin = { workspace = true }
cln-rpc = { workspace = true }
