[package]
name = "wss-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WSS Proxy plugin"
homepage = "https://github.com/ElementsProject/lightning/tree/master/plugins"
repository = "https://github.com/ElementsProject/lightning"

[dependencies]
anyhow = "1"
log = { version = "0.4", features = ['std'] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version="1", features = ['io-std', 'rt-multi-thread', 'sync', 'macros', 'io-util'] }
rcgen = "0.13"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

tokio-tungstenite = { version = "0.26", features = ["tokio-rustls"] }

rustls = "0.23"
tokio-rustls = "0.26"

log-panics = "2"

cln-plugin = { version = "0.3", path = "../../plugins" }
cln-rpc = { version = "0.3", path = "../../cln-rpc" }

