[tool.poetry]
name = "wss-proxy"
version = "24.08rc2"
description = "Web secure socket proxy"
authors = ["ShahanaFarooqui <sfarooqui@blockstream.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyln-client = "^24.2"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
