[project]
name = "wss-proxy"
version = "25.05rc1"
description = "Web secure socket proxy"
authors = [{ name = "ShahanaFarooqui", email = "sfarooqui@blockstream.com" }]
requires-python = ">=3.8"
dependencies = ["pyln-client>=24.11,<25.09", "websockets>=12.0"]

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.uv.sources]
pyln-client = { workspace = true }
